# mozilla-releng-_-build-mar

./: .readthedocs.yaml  .taskcluster.yml  CHANGELOG.rst  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: requirements.txt
src/mardor/: __init__.py
taskcluster/: config.yml
taskcluster/docker/python/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/hello/: kind.yml
taskcluster/kinds/test/: kind.yml
