[project]
name = "mar"
version = "3.2.0"
description = "Package for handling Mozilla Archive files"
url = "https://github.com/mozilla-releng/build-mar"
license = "MPL-2.0"
readme = "README.rst"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "construct",
    "cryptography",
    "six",
]

[project.scripts]
mar = "mardor.cli:main"

[dependency-groups]
dev = [
    "coverage",
    "hypothesis",
    "mock",
    "pytest",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "requests[security]",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.12"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "__pycache__",
  ".gitignore",
  ".readthedocs.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mardor"]
